--- a/알고리즘 예습/3장 검색/Q1.md
+++ b/알고리즘 예습/3장 검색/Q1.md
@@ -1,3 +1,5 @@
+**Q1** , 실습 3-3의 search 함수를 while문이 아니라 for문을 사용하여 수정한 프로그램을 작성하세요.
+
 ```C
 // 선형검색 (보초법 ver) (search 함수의 while을 for문으로 바꾸기)
 #include <stdio.h>
