--- a/알고리즘 예습/3장 검색/Q7.md
+++ b/알고리즘 예습/3장 검색/Q7.md
@@ -10,7 +10,7 @@ int compar(const int* a, const int* b)
 
 void* seqsearch(const void* key, const void* base, size_t nmemb, size_t size, int(*compar)(const void*, const void*))
 {
-	int i, flag=0;
+	int i;
 	for (i = 0; i < size; i++)
 	{
 		if (compar((int*)key, (int*)(base)+i) == 1)
