--- a/알고리즘 예습/4장 스택과 큐/Q5.md
+++ b/알고리즘 예습/4장 스택과 큐/Q5.md
@@ -142,7 +142,7 @@ void Print(const IntQueue* q)
 	for (i = q->front; i < q->rear; i++)
 	{
 		idx = (q->front + i) % q->max;
-		printf("%d ", q->que[i]);
+		printf("%d ", q->que[idx]);
 	}
 	printf("\n");
 }
