--- a/알고리즘 예습/4장 스택과 큐/Q6.md
+++ b/알고리즘 예습/4장 스택과 큐/Q6.md
@@ -1,3 +1,5 @@
+**< Q6 >** 일반적으로 덱(deck)이라는 양방향 대기열은 아래 그림처럼 시작과 끝 지점에서 양쪽으로 데이터를 인큐하거나 디큐하는 자료구조입니다. 양방향 대기열을 구현하는 프로그램을 
+만드세요. 이때 덱(deck)에 저장하는 데이터의 자료형은 int형으로 합니다.
 ```C
 // int형 IntDeck
 #include <stdio.h>
