--- a/알고리즘 예습/6장 정렬/실습 6-1.md
+++ b/알고리즘 예습/6장 정렬/실습 6-1.md
@@ -3,25 +3,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 
-void bubble(int a[], int n)
-{
-	int i, j, tmp;
-
-	for (i = 0; i < n - 1; i++)
-	{
-		for (j = i; j < n; j++)
-		{
-			if (a[i] > a[j])
-			{
-				tmp = a[i];
-				a[i] = a[j];
-				a[j] = tmp;
-			}
-		}
-	}
-}
-
-/*void bubble(int a[], int n) // 교재 ver
+void bubble(int a[], int n) // 교재 ver
 {
 	int i, j,tmp;
 
@@ -37,7 +19,7 @@ void bubble(int a[], int n)
 			}
 		}
 	}
-}*/
+}
 
 int main(void)
 {
