--- a/알고리즘 예습/6장 정렬/Q3.md
+++ b/알고리즘 예습/6장 정렬/Q3.md
@@ -1,4 +1,4 @@
-**< Q3 >** 버블 정렬(버전 2)의 아이디어는 배열ㅇ ㅣㅣ정렬을 마쳤는지를 검사하는 데 응용할 수 있습니다. 전달받은 배열 a가 오름차순으로 정렬을 마쳤는지 
+**< Q3 >** 버블 정렬(버전 2)의 아이디어는 배열이 정렬을 마쳤는지를 검사하는 데 응용할 수 있습니다. 전달받은 배열 a가 오름차순으로 정렬을 마쳤는지 
 검사하는 함수를 작성하세요. 이때 오름차순으로 정렬을 마친 상태라면 1, 그렇지 않으면 0을 반환하도록 작성하세요.
 ```C
 
