--- a/알고리즘 예습/6장 정렬/Q6.md
+++ b/알고리즘 예습/6장 정렬/Q6.md
@@ -1,3 +1,8 @@
+**< Q6 >** [9 1 3 4 5 6 7 8] <- 이 배열은 두 번째 요소부터는 정렬은 되어 있지만 버전 3의 버블 정렬 알고리즘을 사용해도 빠른 시간 안에 정렬 작업을 마칠 수는 없습니다. 
+왜냐하면 맨 앞에 있는 요소의 값(9)은 1회의 패스를 거쳐도 한 칸만 뒤로 옮겨지기 때문입니다. 그래서 **홀수 번째의 패스는 가장 작은 요소를 맨 앞으로 옮기고 짝수 번째 패스는 
+가장 큰 요소를 맨 뒤로 옮기는 방식** 을 사용하면 (패스의 스캔 방향을 교대로 바꾸면) 이런 정렬을 더 적은 횟수로 비교를 수행할 수 있습니다. 버전 3의 프로그램을 개선하여 
+양방향 버블 정렬을 수행하는 프로그램을 작성하세요.
+
 ```C
 #include <stdio.h>
 #include <stdlib.h>
