--- a/알고리즘 예습/6장 정렬/Q1.md
+++ b/알고리즘 예습/6장 정렬/Q1.md
@@ -10,15 +10,15 @@ void bubble(int a[], int n)
 {
 	int i, j, tmp;
 
-	for (i = 0; i < n - 1; i++)
+	for (i = n-1; i > 0; i--)
 	{
-		for (j = i; j < n; j++)
+		for (j = 0; j < i; j++)
 		{
-			if (a[i] > a[j])
+			if (a[j] > a[j+1])
 			{
-				tmp = a[i];
-				a[i] = a[j];
-				a[j] = tmp;
+				tmp = a[j];
+				a[j] = a[j+1];
+				a[j+1] = tmp;
 			}
 		}
 	}
