--- a/알고리즘 예습/6장 정렬/Q10.md
+++ b/알고리즘 예습/6장 정렬/Q10.md
@@ -44,16 +44,16 @@ int main()
 	scanf("%d", &nx);
 	x = (int*)malloc((nx + 1) * sizeof(int)); // 요소의 개수가 nx인 int형 배열을 생성
 
-	for (i = 1; i < nx + 1; i++)
+	for (i = 0; i < nx; i++)
 	{
 		printf("x[%d] : ", i);
 		scanf("%d", &x[i]);
 	}
 
-	insertion(x, nx); // 배열 x를 단순 삽입 정렬
+	bin_insertion(x, nx); // 배열 x를 단순 삽입 정렬
 
 	puts("오름차순으로 정렬했습니다.");
-	for (i = 1; i < nx + 1; i++)
+	for (i = 0; i < nx; i++)
 		printf("x[%d] = %d\n", i, x[i]);
 	free(x); // 배열을 해제
 
